--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
     }
   ],
   "require": {
-    "magento/framework": "100.1.*|101.0.*|102.0.*",
-    "magento/module-payment": "100.1.*|100.2.*|100.3.*",
-    "magento/module-checkout": "100.1.*|100.2.*|100.3.*",
-    "magento/module-sales": "100.1.*|101.0.*|102.0.*",
+    "magento/framework": "100.1.*|101.0.*|102.0.*|103.0.*",
+    "magento/module-payment": "100.1.*|100.2.*|100.3.*|100.4.*",
+    "magento/module-checkout": "100.1.*|100.2.*|100.3.*|100.4.*",
+    "magento/module-sales": "100.1.*|101.0.*|102.0.*|103.0.*",
     "payplug/payplug-php": "^3.2.0",
     "giggsey/libphonenumber-for-php": "^8.10"
   },
